Undo commented out line

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -1613,7 +1613,7 @@
         </div>
 
         <div class="rating col-sm-12 content-block">
-{#            {% comments_for cm %}#}
+            {% comments_for cm %}
         </div>
         {#                #}
         {# dialogs follow #}
