--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -2889,7 +2889,7 @@ h4.title {
 
 /*  Home page revamp */
 #home-page-carousel {
-	height: calc(100% + 52px);
+	height: 75%;
     overflow: hidden;
 	border: 0;
 	margin-top: -52px;
@@ -2963,27 +2963,16 @@ span.carousel-control-icon {
 
 }
 
-.carousel-control-block::after {
-	content: '';
-	border: 1px solid #ddd;
-	height: 40px;
-	float: right;
-	margin-top: -60px;
-}
-
-.carousel-control-block:last-child::after {
-	height: 0;
-}
-
 .carousel-inner > .item {
 	text-align: center;
     height: 100%;
 }
 
 .carousel-inner > .item > img {
-	height: 100%;
-	margin: auto;
-	object-fit: cover;
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    object-fit: cover;
 }
 
 .carousel-inner > .item > .item-caption {
@@ -3001,7 +2990,7 @@ span.carousel-control-icon {
 	height: 100%;
 	width: 100%;
 	position: absolute;
-	background: rgba(0, 0, 0, 0.35);
+	background: rgba(0, 0, 0, 0.25);
 }
 
 .home-panel-info {
@@ -3034,6 +3023,7 @@ span.carousel-control-icon {
 	padding: 50px 0;
 	margin:25px 0;
 	margin-top: 30px;
+    margin-bottom: -60px;
 	text-align: center;
 }
 
@@ -3119,10 +3109,11 @@ span.carousel-control-icon {
 
 .steps-container {
     text-align: center;
+    margin-top: -20px;
 }
 
 .step-wrapper {
-    padding: 0 20px;
+    padding: 20px;
     margin-top: 20px;
     height: 70px;
     display: inline-block;
@@ -3135,7 +3126,6 @@ span.carousel-control-icon {
     background: #F7F8F8;
     box-shadow: 0 1px 1px rgba(0,0,0,0.05);
 	cursor: pointer;
-	margin-top: 20px;
 }
 
 .step-item:hover {
@@ -3151,7 +3141,7 @@ span.carousel-control-icon {
 	color: #0087BD;
 }
 
-.ste-number {
+.step-number {
     position: absolute;
     border: 1px solid #A9A9A9;
     width: 30px;
@@ -3162,5 +3152,26 @@ span.carousel-control-icon {
     box-shadow: 1px 1px 5px #DDD;
     color: #000;
     left: 6px;
-    top: 26px;
+    top: 50px;
+}
+
+.home-page-block {
+    margin-bottom: 60px;
+}
+
+div.description {
+    display:none
+}
+
+div.description.active {
+    display: block;
+}
+
+.step-description {
+    text-align: center;
+}
+
+.description-container {
+    text-align: center;
+        margin-top: 25%;
 }
