--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -138,7 +138,7 @@
                         </li>
                     {% else %}
                     <!-- <li id="signup-menu"><a href="{% url 'signup' %}">Sign Up</a></li> -->
-                    <li id="signin-menu"><a href="{% url 'login' %}">Sign In</a></li>
+                    <li id="signin-menu"><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Sign In</a></li>
                     {% endif %}
                     {% endifinstalled %}
                     {% comment %}
