--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -127,7 +127,7 @@
                                 {% if page.perms.delete %}
                                     <a id="new-version" data-toggle="modal" data-target="#new-version-resource-dialog">
                                         <span data-toggle="tooltip" data-placement="auto" title="Create a new version of this resource"
-                                              class="glyphicon glyphicon glyphicon-new-window icon-button btn-edit"></span>
+                                              class="glyphicon glyphicon-new-window icon-button btn-edit"></span>
                                     </a>
                                     <a id="delete" data-toggle="modal" data-target="#delete-resource-dialog">
                                         <span data-toggle="tooltip" data-placement="auto" title="Delete this resource"
