--- a/hs_tools_resource/templates/pages/toolresource.html
+++ b/hs_tools_resource/templates/pages/toolresource.html
@@ -49,7 +49,7 @@
                         <h4><strong>Tool Icon:</strong></h4>
                         <hr style="margin-top: 0px;margin-bottom: 2px">
                         <div class="row">
-                            <div class="col-sm-8"><img src="{{ tool_icon_url }}" style="height: 100px; width: 100px;"/></div>
+                            <div class="col-sm-8"><img id="tool-icon" src="{{ tool_icon_url }}"/></div>
                         </div>
                         <hr style="border:0">
                     {%  endif %}
