--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -18,7 +18,7 @@
                     <h1><strong>Share your data and models with colleagues</strong></h1>
                     <h4>Upload, share, and access a broad set of hydrologic data types and models. Manage who has access to the content that you share.</h4>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/carousel/bg1.jpg" alt="Image 1">
+                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg1.jpg" alt="Image 1">
             </div>
 
             <div class="item">
@@ -27,7 +27,7 @@
                     <h1><strong>Discover</strong></h1>
                     <h4>Discover content shared by your colleagues and other users. Access a broad range of resource types used in hydrology.</h4>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/carousel/bg2.jpg" alt="Image 2">
+                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg5.jpg" alt="Image 2">
             </div>
 
             <div class="item">
@@ -36,7 +36,7 @@
                     <h1><strong>Collaborate</strong></h1>
                     <h4>Upload your data or models and share them with other users. You control who has access.</h4>
                 </div>
-                <img class="img-responsive" src="{{ STATIC_URL }}img/carousel/bg4.jpg" alt="Image 3">
+                <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/carousel/bg2.jpg" alt="Image 3">
             </div>
         </div>
 
@@ -72,17 +72,24 @@
         </a>
     </div>
 
-    <div class="row home-page-block">
-        <div class="col-xs-12">
-            <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/logo-only.png"
-                 alt="HydroShare logo">
-            <center><strong><h3 class="home-page-block-title">Join the community to start sharing</h3></strong></center>
-            <center>
-                <span>HydroShare is an online collaboration environment for sharing data, models, and code.</span>
-            </center>
-            <center><a class="btn btn-primary btn-signup" href="#">Sign up now</a></center>
+    {% if user.is_anonymous %}
+    <div>
+        <div class="container">
+            <div class="row home-page-block">
+                <div class="col-xs-12">
+                    <img class="img-home-art img-responsive" src="{{ STATIC_URL }}img/logo-only.png"
+                         alt="HydroShare logo">
+                    <center><strong><h3 class="home-page-block-title">Join the community to start sharing</h3></strong>
+                    </center>
+                    <center>
+                        <span>HydroShare is an online collaboration environment for sharing data, models, and code.</span>
+                    </center>
+                    <center><a class="btn btn-primary btn-signup slideInBlock" href="sign-up/">Sign up now</a></center>
+                </div>
+            </div>
         </div>
     </div>
+    {% endif %}
 
     <div>
         <div class="container home-page-block">
@@ -110,7 +117,7 @@
                     </ul>
                 </div>
                 <div class="col-xs-12- col-sm-5 slideInBlock">
-                    <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/step2.png"
+                    <img class="img-responsive" src="{{ STATIC_URL }}img/home-page/laptop.png"
                          alt="computer">
                 </div>
             </div>
@@ -152,48 +159,50 @@
             </div>
 
             <div class="row home-page-block description active" data-id="0">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-8">
                     <div class="description-container">
                         <span class="step-description">Collect your data using the same methods you use now. HydroShare supports a broad set of hydrologic data types.</span>
                     </div>
                 </div>
-                <div class="col-xs-6">
-                    <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step1.png"
-                         alt="Create data">
+                <div class="col-xs-12 col-sm-4">
+                    <div style="background-image: url('{{ STATIC_URL }}img/home-page/step1.jpg');"
+                         class="round-image img-step">
+                    </div>
                 </div>
             </div>
 
             <div class="row home-page-block description" data-id="1">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-8">
                     <div class="description-container">
                         <span class="step-description">Upload your data files to HydroShare through the web user interface. HydroShare will automatically extract as much metadata as it can from the files you upload.</span>
                     </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-4">
                     <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step2.png"
                          alt="Create data">
+
                 </div>
             </div>
 
             <div class="row home-page-block description" data-id="2">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-8">
                     <div class="description-container">
                         <span class="step-description">Use HydroShare's simple metadata entry forms to finish describing your data so that your colleagues can find, access, and interpret it.</span>
                     </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-4">
                     <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step3.png"
                          alt="Create data">
                 </div>
             </div>
 
             <div class="row home-page-block description" data-id="3">
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-8">
                     <div class="description-container">
                         <span class="step-description">You choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>
                     </div>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-12 col-sm-4">
                     <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step4.png"
                          alt="Create data">
                 </div>
