--- a/theme/templates/pages/homepage.html
+++ b/theme/templates/pages/homepage.html
@@ -128,18 +128,17 @@
             <div class="row home-page-block">
                 <div class="steps-container">
                     <div class="col-xs-12 col-sm-3 step-wrapper">
-                        <div class="step-item active" data-id="0">
+                        <div class="step-item">
                             <div class="step-number">1</div>
                             <span class="carousel-control-icon glyphicon glyphicon-plus"></span>
                             <h4>Create data</h4>
                         </div>
-
-                        <div class="">
+                        <div>
                             <div class="description-container">
                                 <span class="step-description">Collect your data using the same methods you use now. HydroShare supports a broad set of hydrologic data types.</span>
                             </div>
                         </div>
-                        <div class="">
+                        <div>
                             <div style="background-image: url('{{ STATIC_URL }}img/home-page/step1.jpg');"
                                  class="round-image img-step">
                             </div>
@@ -147,53 +146,52 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-3 step-wrapper">
-                        <div class="step-item" data-id="1">
+                        <div class="step-item">
                             <div class="step-number">2</div>
                             <span class="carousel-control-icon glyphicon glyphicon-upload"></span>
                             <h4>Upload to HydroShare</h4>
                         </div>
-                        <div class="">
+                        <div>
                             <div class="description-container">
                                 <span class="step-description">Upload your data files to HydroShare through the web user interface. HydroShare will automatically extract as much metadata as it can from the files you upload.</span>
                             </div>
                         </div>
-                        <div class="">
+                        <div>
                             <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step2.png"
                                  alt="Create data">
-
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-3 step-wrapper">
-                        <div class="step-item" data-id="2">
+                        <div class="step-item">
                             <div class="step-number">3</div>
                             <span class="carousel-control-icon glyphicon glyphicon-pencil"></span>
                             <h4>Describe with metadata</h4>
                         </div>
-                        <div class="">
+                        <div>
                             <div class="description-container">
                                 <span class="step-description">Use HydroShare's simple metadata entry forms to finish describing your data so that your colleagues can find, access, and interpret it.</span>
                             </div>
                         </div>
-                        <div class="">
+                        <div>
                             <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step3.png"
                                  alt="Create data">
                         </div>
                     </div>
 
                     <div class="col-xs-12 col-sm-3 step-wrapper">
-                        <div class="step-item" data-id="3">
+                        <div class="step-item">
                             <div class="step-number">4</div>
                             <span class="carousel-control-icon glyphicon glyphicon-share"></span>
                             <h4>Share with colleagues</h4>
                         </div>
 
-                        <div class="">
+                        <div>
                             <div class="description-container">
                                 <span class="step-description">You choose who has access to the data and models you have uploaded to HydroShare. You can share with individual users or publish your resources for everyone to access.</span>
                             </div>
                         </div>
-                        <div class="">
+                        <div>
                             <img class="img-responsive img-home-art" src="{{ STATIC_URL }}img/home-page/step4.png"
                                  alt="Create data">
                         </div>
